--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
 .main {
   min-height: 100vh;
   padding: 4rem 0;
+  padding-bottom: 14rem;
   flex: 1;
   display: flex;
   flex-direction: column;
